# tg_bot

./: LICENSE  pyproject.toml
tg_schedule_bot/cli/: __init__.py  bot.py  config.py  db.py
tg_schedule_bot/src/: schedule.py
